--- a/高性能计算知识.md
+++ b/高性能计算知识.md
@@ -1,4 +1,4 @@
-#1. 高性能计算简介
+1. 高性能计算简介
 ===
 
 >>高性能计算(High performance computing， 缩写 HPC) 指通常使用很多处理器（作为单
@@ -8,7 +8,7 @@
 网络互连。基本的网络拓扑和组织可以使用一个简单的总线拓扑，在性能很高的环境中，网
 状网络系统在主机之间提供较短的潜伏期，所以可改善总体网络性能和传输速率。
 
-##1.1. 高性能计算硬件结构
+1.1. 高性能计算硬件结构
 ---
 >>高性能计算拓扑结构如图 1 所示，从硬件结构上，高性能计算系统包含`计算节点`、 `IO
 节点`、`登录节点`、`管理节点`、`高速网络`、`存储系统`等组成。
