--- a/高性能计算知识.md
+++ b/高性能计算知识.md
@@ -13,6 +13,6 @@
 >>高性能计算拓扑结构如图 1 所示，从硬件结构上，高性能计算系统包含`计算节点`、 `IO
 节点`、`登录节点`、`管理节点`、`高速网络`、`存储系统`等组成。 
 
->>>>>>>>>>![](https://github.com/cheonn/HPC-knowledge/blob/master/img/hpc.png)
+![](https://github.com/cheonn/HPC-knowledge/blob/master/img/hpc.png)
 
-                      >>>>>  图1  hpc硬件架构
+                        图1  hpc硬件架构
